// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group components-stepper wp-components-stepper css-o8ji27"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-11geyni"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-hnrzfk"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1mce53w"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3nxkd3"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group components-stepper wp-components-stepper css-o8ji27"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-11geyni"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-1peroyj"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1mce53w"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-xq16lt"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group components-stepper wp-components-stepper css-pdgyh0"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-11geyni"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-mkskzj"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="18 15 12 9 6 15"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1bp6z9a"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-f8wig3"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
